Fixes the spacing issue in mobile layout

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -77,6 +77,9 @@ a {
       }
     }
     padding: 20px;
+    @media only screen and (max-width : 480px) {
+      padding: 10px;
+    }
     color: transparent;
     background-color: transparent;
     position: absolute;
